# trend-lab-agent-mission-control-260623

./: README.md  pyproject.toml
src/agent_mission_control/: main.py
tests/: test_smoke.py
