[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mission-control"
version = "0.1.0"
description = "Local-first mission control for supervised AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Mission Control contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
agent-mission-control = "agent_mission_control.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
